--- a/src/scss/page-bg.scss
+++ b/src/scss/page-bg.scss
@@ -1,6 +1,5 @@
 .page-bg {
     position: fixed;
-    width: 100%;
     height: 100%;
     z-index: 0.1;
 }
